# Binary-Tree-Calculator

binary-tree-calculator/assignment-binary-tree-calculator-wgunther85-main/: CMakeLists.txt
binary-tree-calculator/assignment-binary-tree-calculator-wgunther85-main/inc/: TreeParser.h
binary-tree-calculator/assignment-binary-tree-calculator-wgunther85-main/src/: TreeParser.cpp  binary-tree-test.cpp
